recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: '(' expected but 'else' found.
  else{
  ^Tree:12: error: illegal start of simple expression
} 
^