recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  avance(length)
  if
  else{
    if(steps <3){
      current(steps)
      droite(angle)
      avance(shrink*length)
      return(steps+1,length,angle,shrink+shrink)
    }
  }
}